# GenExample

./: .gitignore  CMakeLists.txt  GenSpeed  GenSpeed2  Makefile  httplib.hpp  main.cpp  matt.cpp  test.cpp
generationByCubitect/: finders.c  finders.cpp  finders.h  finders.hpp  generator.c  generator.cpp  generator.hpp  javarnd.h  layers.c  layers.cpp  layers.h  layers.hpp
